tests/neg/polymorphic-erased-functions-used.check
-- Error: tests/neg/polymorphic-erased-functions-used.scala:5:33 -------------------------------------------------------
5 |def t1 = [T] => (erased t: T) => t // error
  |                                 ^
  |                                 parameter t is declared as `erased`, but is in fact used
-- Error: tests/neg/polymorphic-erased-functions-used.scala:6:42 -------------------------------------------------------
6 |def t2 = [T, U] => (t: T, erased u: U) => u // error
  |                                          ^
  |                                          parameter u is declared as `erased`, but is in fact used
